Colocando imágenes, bug del z-index en las cards y omitir los botones plus and minus en caso de que sólo haya una  medida

--- a/src/estilos/_mapa.scss
+++ b/src/estilos/_mapa.scss
@@ -89,12 +89,17 @@ google-map {
   cursor: pointer;
 }
 
+.icon-cama {
+  
+}
+
 .burguer-button--show {
   display: flex;
   position: relative;
   justify-content: center;
   left: 0px;
   top: 5px;
+  z-index: 0;
 }
 
 @media screen and (max-width: 850px) {
