--- a/src/estilos/_overlay.scss
+++ b/src/estilos/_overlay.scss
@@ -25,6 +25,7 @@
   opacity: 0;
   visibility: hidden;
   height: 100%;
+  z-index: 2;
 }
 
 .overlay.active {
